--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,13 +1,30 @@
 {{!-- Hero section start --}}
 <section class="hero is-primary home-header is-fullheight-with-navbar">
-	<div class="hero-body is-bold">
-		<div class="container">
-			<h1 class="title">
+	<div class="hero-head is-bold">
+		<div class="container" id="welcome_to_EBOD">
+			<h1 class="title is-4">
 				Welcome to Exotic Birds of Denver!
 			</h1>
-			<h2 class="subtitle">
+			<h2 class="subtitle is-6">
 				Exotic Birds of Denver is your one-stop shop for all your parrot needs!
 			</h2>
+		</div>
+	</div>
+	<div class="hero-body is-bold">
+		<div class="container has-text-centered">
+			<h1 class="title is-2">
+				We've moved!
+			</h1>
+			<h2 class="subtitle is-4">
+				Come see us at our new, bigger location just 1 mile south on Broadway.
+			</h2>
+		</div>
+	</div>
+	<div class="hero-footer is-bold">
+		<div class="container has-text-right">
+			<h1 class="title has-text-black is-4">
+				Hours: M-F 10-6, Sat 11-5, Sun 12-4
+			</h1>
 		</div>
 	</div>
 </section>
@@ -17,13 +34,7 @@
 
 <section class="section">
 	<div class="container">
-		<div class="notification is-primary">
-			<p class="title">We've Moved!</p>
-			<p>Come visit us at our brand new location just 1 mile south on Broadway.</p>
-		</div>
-	</div>
-	<div class="container">
-		<div class="notification is-success">
+		<div class="notification is-success has-box-shadow">
 			<p class="title">Why buy from us?</p>
 			<p class="">We specialize in hand-fed and hand-raised parrots. Our birds are socialized with humans and birds alike toguarantee that you have a happy pet that intigrates into your family quickly and easily!</p>
 			<p class="">Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys,foodandsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
