--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- Navbar start -->
-	<nav class="navbar is-primary is-fixed-top" role="navigation" aria-label="main navigation">
+	<nav class="navbar is-primary is-fixed-top has-box-shadow" role="navigation" aria-label="main navigation">
 		<div class="navbar-brand">
 			<a class="navbar-item" href="/">
 				<h1>Exotic Birds of Denver</h1>
@@ -57,13 +57,27 @@
 	{{{body}}}
 
 	<footer class="footer">
-		<div class="content has-text-centered">
-			<p>Come visit us!</p>
-			<p>
-				{{address}}
-				{{phone-number}}
-			</p>
-
+		<div class="level">
+			<div class="level-item">
+				<div class="has-text-centered">
+					<p>Our Address:</p>
+					<p>123 Broadway</p>
+					<p>Denver, CO 88888</p>
+				</div>
+			</div>
+			<div class="level-item">
+				<div class="has-text-centered">
+					<p class="title">Come visit us!</p>
+				</div>
+			</div>
+			<div class="level-item">
+				<div class="has-text-centered">
+					<p>Our Address:</p>
+					<p>Hours: M-F 10-6</p>
+					<p>Sat 11-5</p>
+					<p>Sun 12-4</p>
+				</div>
+			</div>
 		</div>
 	</footer>
 </body>
