--- a/public/stylesheets/Sass/mystyles.scss
+++ b/public/stylesheets/Sass/mystyles.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @import 'parts/mixins';
 @import 'parts/variables';
-@import 'parts/home';
+@import 'parts/custom';
 
 
 @import "../../../node_modules/bulma/bulma.sass";
