--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -68,12 +68,15 @@
 			<div class="level-item">
 				<div class="has-text-centered">
 					<p class="title">Come visit us!</p>
+					<a class="is-primary" href="tel:+13039315554">303-931-5554</a>
+
+
 				</div>
 			</div>
 			<div class="level-item">
 				<div class="has-text-centered">
-					<p>Our Address:</p>
-					<p>Hours: M-F 10-6</p>
+					<p>Hours:</p>
+					<p>M-F 10-6</p>
 					<p>Sat 11-5</p>
 					<p>Sun 12-4</p>
 				</div>
