--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 {{!-- Hero section start --}}
-<section class="hero is-primary home-header is-fullheight-with-navbar">
+<section class="hero is-primary home-header is-medium">
 	<div class="hero-head is-bold">
 		<div class="container" id="welcome_to_EBOD">
 			<h1 class="title is-4">
@@ -22,7 +22,7 @@
 	</div>
 	<div class="hero-footer is-bold">
 		<div class="container has-text-right">
-			<h1 class="title has-text-black is-4">
+			<h1 class="title is-4">
 				Hours: M-F 10-6, Sat 11-5, Sun 12-4
 			</h1>
 		</div>
