updated contact us page with all info and added address to footer

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,19 +1,52 @@
+{{!-- Location info start--}}
+<section class="section">
+	<div class="columns is-mobile is-centered">
+		<div class="column is-two-thirds">
+			<table class="table is-fullwidth is-bordered">
+				<tr>
+					<td>Call us:</td>
+					<td>303-931-5554</td>
+				</tr>
+				<tr>
+					<td>Email us:</td>
+					<td><a href="mailto:exoticbirdsofdenver@yahoo.com">exoticbirdsofdenver@yahoo.com</a></td>
+				</tr>
+				<tr>
+					<td>Visit us:</td>
+					<td>
+						<p>4796 S Broadway</p>
+						<p>Englewood, CO 80113</p>
+					</td>
+				</tr>
+				<tr>
+					<td>Map:</td>
+					<td>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3072.8914418821823!2d-104.98970048462785!3d39.62964807946435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c805858a190f9%3A0x72f0dddf541522bd!2s4796+S+Broadway%2C+Englewood%2C+CO+80113!5e0!3m2!1sen!2sus!4v1550372259780" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</section>
+{{!-- location info end --}}
 
 {{!-- Contact form start --}}
 <section class="section">
 	<div class="columns is-centered">
-		<div class="column is-half">
+		<div class="column is-two-thirds">
+			<h1 class="title">Have something to say?</h1>
+			<h2 class="subtitle">Say it here!</h2>
 			<div class="field">
 				<label class="label">Name</label>
 				<div class="control">
-					<input class="input" type="text" placeholder="Text input">
+					<input class="input" type="text" placeholder="Your name">
 				</div>
 			</div>
 
 			<div class="field">
 				<label class="label">Email</label>
 				<div class="control has-icons-left has-icons-right">
-					<input class="input" type="email" placeholder="Email input">
+					<input class="input" type="email" placeholder="Your email">
 					<span class="icon is-small is-left">
 						<i class="fas fa-envelope"></i>
 					</span>
@@ -24,7 +57,7 @@
 			</div>
 
 			<div class="field">
-				<label class="label">Subject</label>
+				<label class="label">What do you need?</label>
 				<div class="control">
 					<div class="select">
 						<select>
@@ -41,7 +74,7 @@
 			<div class="field">
 				<label class="label">Message</label>
 				<div class="control">
-					<textarea class="textarea" placeholder="Textarea"></textarea>
+					<textarea class="textarea" placeholder="Your message here"></textarea>
 				</div>
 			</div>
 
