--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -61,8 +61,10 @@
 			<div class="level-item">
 				<div class="has-text-centered">
 					<p>Our Address:</p>
-					<p>123 Broadway</p>
-					<p>Denver, CO 88888</p>
+					<a href="https://goo.gl/maps/XYDRVevCtK42" target="_blank">
+						<p>4796 S Broadway</p>
+						<p>Englewood, CO 80113</p>
+					</a>
 				</div>
 			</div>
 			<div class="level-item">
@@ -76,7 +78,7 @@
 			<div class="level-item">
 				<div class="has-text-centered">
 					<p>Hours:</p>
-					<p>M-F 10-6</p>
+					<p>Mon - Fri 10-6</p>
 					<p>Sat 11-5</p>
 					<p>Sun 12-4</p>
 				</div>
