--- a/views/home.hbs
+++ b/views/home.hbs
@@ -35,17 +35,29 @@
 <section class="section">
 	<div class="container">
 		<div class="notification is-success has-box-shadow">
-			<p class="title">Why buy from us?</p>
-			<p class="">We specialize in hand-fed and hand-raised parrots. Our birds are socialized with humans and birds alike toguarantee that you have a happy pet that intigrates into your family quickly and easily!</p>
-			<p class="">Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys,foodandsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
+			<div class="columns is-vcentered is-multiline">
+				<div class="column is-three-fifths">
+					<div class="content">
+						<p class="title is-2">Why buy from us?</p>
+						<p class="title">We specialize in hand-fed and hand-raised parrots.</p>
+						<p> Our birds are socialized with humans and birds alike toguarantee that you have a happy pet that intigrates into your family quickly and easily!</p>
+						<p>Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys,foodandsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
+					</div>
+				</div>
+				<div class="column is-two-fifths is-centered">
+					<img class="image" src="/public/images/ebod-current/birds/birdman.png" alt="birdman Dave">
+				</div>
+				<div class="column is-two-fifths">
+					<img class="image" src="/public/images/open-source/vish-k-396770-unsplash.jpg" alt="birdman Dave">
+				</div>
+				<div class="column is-three-fifths">
+					<div class="content">
+						<p class="title">We support you even after you buy</p>
+						<p>We provide quality worry free boarding whenever needed along with professional grooming by Bird-man Dave. We also provide advice on how to keep your bird happy and healthy.</p>
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
-	<div class="container">
-		<div class="notification is-warning">
-			<p class="title">We support you even after you buy</p>
-			<p>We provide quality worry free boarding whenever needed along with professional grooming by Bird-man Dave.</p>
-		</div>
-	</div>
 </section>
 
 {{!--
