--- a/views/home.hbs
+++ b/views/home.hbs
@@ -33,35 +33,43 @@
 {{!-- info section start --}}
 
 <section class="section">
-	<div class="container">
-		<div class="">
-			<div class="columns is-vcentered is-multiline">
-				<div class="columns notification is-success">
-					<div class="column is-three-fifths">
-						<div class="content">
-							<p class="title is-2">Why buy from us?</p>
-							<p class="title">We specialize in hand-fed and hand-raised parrots.</p>
-							<p> Our birds are socialized with humans and birds alike toguarantee that you have a happy pet that intigrates into your family quickly and easily!</p>
-							<p>Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys,foodandsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
-						</div>
-					</div>
-					<div class="column is-two-fifths has-text-centered">
-						<img class="image" src="/public/images/ebod-current/birds/birdman.png" alt="birdman Dave">
-					</div>
-				</div>
-				<div class="columns notification is-warning">
-					<div class="column is-two-fifths">
-						<img class="image" src="/public/images/open-source/vish-k-396770-unsplash.jpg" alt="birdman Dave">
-					</div>
-					<div class="column is-three-fifths">
-						<div class="content">
-							<p class="title">We support you even after you buy</p>
-							<p>We provide quality worry free boarding whenever needed along with professional grooming by Bird-man Dave. We also provide advice on how to keep your bird happy and healthy.</p>
-						</div>
-					</div>
+	<div class="container notification is-primary">
+		<div class="tile is-ancestor">
+			<div class="tile is-parent has-text-centered">
+				<div class="tile is-child has-text-centered">
+					<p class="title is-2">Why buy from us?</p>
 				</div>
 			</div>
 		</div>
+		<div class="tile is-ancestor">
+			<div class="tile is-parent is-8">
+				<div class="tile is-child notification is-success">
+					<p class="title">We specialize in hand-fed and hand-raised parrots.</p>
+					<p> Our birds are socialized with humans and birds alike toguarantee that you have a happy pet that intigrates into your family quickly and easily!</p>
+					<p>Walk through our large display room to choose from a wide selection of cages, play-gyms, stands, toys,foodandsupplements. We are happy to recommend the appropriate products for your specific bird needs.</p>
+				</div>
+			</div>
+			<div class="tile is-parent">
+				<img class="image has-image-centered" src="/public/images/ebod-current/birds/birdman.png" alt="birdman Dave">
+			</div>
+		</div>
+		<div class="tile is-ancestor">
+			<div class="tile is-parent">
+				<img class="image" src="/public/images/open-source/vish-k-396770-unsplash.jpg" alt="birdman Dave">
+			</div>
+			<div class="tile is-parent is-8">
+				<div class="tile is-child notification is-warning">
+					<p class="title">We support you even after you buy</p>
+					<p>We provide quality worry free boarding whenever needed along with professional grooming by Bird-man Dave. We also provide advice on how to keep your bird happy and healthy.</p>
+				</div>
+			</div>
+		</div>
+		<div class="tile is-ancestor">
+			<div class="tile is-parent">
+
+			</div>
+		</div>
+	</div>
 </section>
 
 {{!--
