--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -56,7 +56,7 @@
 	<!-- Navbar end -->
 	{{{body}}}
 
-	<footer class="footer">
+	<footer class="footer notification is-primary">
 		<div class="level">
 			<div class="level-item">
 				<div class="has-text-centered">
