--- a/public/stylesheets/mystyles.css
+++ b/public/stylesheets/mystyles.css
@@ -50,6 +50,15 @@ footer {
   background-attachment: fixed;
   background-position: top center; }
 
+.contact-header {
+  background-image: linear-gradient(#016d74, rgba(1, 109, 116, 0)), url("/public/images/open-source/jonah-pettrich-549680-unsplash.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: top center; }
+
 /*! bulma.io v0.7.4 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
