--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,3 +1,18 @@
+{{!-- Hero section start --}}
+<section class="hero is-primary contact-header is-medium">
+	<div class="hero-body is-bold">
+		<div class="container">
+			<h1 class="title">
+				Contact Us
+			</h1>
+			<h2 class="subtitle">
+				Have any more questions?  Reach out to our bird experts!
+			</h2>
+		</div>
+	</div>
+</section>
+{{!-- Hero Section End --}}
+
 {{!-- Location info start--}}
 <section class="section">
 	<div class="columns is-mobile is-centered">
@@ -31,7 +46,7 @@
 {{!-- location info end --}}
 
 {{!-- Contact form start --}}
-<section class="section">
+{{!-- <section class="section">
 	<div class="columns is-centered">
 		<div class="column is-two-thirds">
 			<h1 class="title">Have something to say?</h1>
@@ -88,7 +103,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> --}}
 {{!-- Contact form end --}}
 
 
