fixed toys link

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -133,7 +133,7 @@
 {{!-- food section end --}}
 
 {{!-- cages section start --}}
-<section class="section" id="cages">
+<section class="section" id="toys">
 	<div class="hero is-primary products-header">
 		<div class="hero-body is-bold">
 			<div class="container">
