Minor content updates from Dave

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -120,7 +120,8 @@
 			
 			<ul>
 				<li>Roudybush</li>
-				<li>Zupreem Harrisons</li>
+				<li>Zupreem</li>
+				<li>Caitec Oven Fresh Bites (No corn or wheat)</li>
 				<li>Volkman</li>
 				<li>Bird Street Bistro</li>
 				<li>Lafebres</li>
