--- a/views/services.hbs
+++ b/views/services.hbs
@@ -28,7 +28,7 @@
 	</div>
 	<div class="container notification">
 		<div class="content">
-			<p>Birdman Dave will trim your bird's wings, nails, and beak.  Normal grooming days: Mon-Wed-Fri: 11 am till 6 pm and every other Saturday: 1 pm till 5 pm but we recommend calling ahead to schedule!</p>
+			<p>Birdman Dave will trim your bird's wings, nails, and beak.  Normal grooming days: Mon-Wed-Fri: 11 am till 5 pm and every other Saturday: 1 pm till 4 pm but we recommend calling ahead to confirm before coming down!</p>
 			<p>To avoid stress and injury for the parrot, they are wrapped in a towel to groom.</p>
 			<p>Please contact Exotic Birds of Denver for Additional Information</p>
 		</div>
@@ -70,7 +70,7 @@
 	{{!-- boarding basics --}}
 	<div class="title is-4">Boarding Basics</div>
 			<ul>
-				<li>Boarding rates apply the day the Parrot is dropped off. (The next day fee starts at 11 am the preceding day.)</li>
+				<li>Boarding rates apply the day the Parrot is dropped off. (The next day fee starts at 11 am the preceding day. Minimum 2 day stay.)</li>
 				<li>Multi-bird discounts and longer-stay discounts available (Call for quotes)</li>
 				<li>After hours drop offs, or after hour pick up, add 1 day of boarding fees.</li>
 				<li>Cages and food for boarding are provided by Exotic Birds of Denver.</li>
