fixed image error on homepage

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -50,12 +50,16 @@
 				</div>
 			</div>
 			<div class="tile is-parent">
-				<img class="image has-image-centered" src="/public/images/ebod-current/birds/birdman.png" alt="birdman Dave">
+				<div class="tile is-child">
+					<img class="image has-image-centered" src="/public/images/ebod-current/birds/birdman.png" alt="birdman Dave">
+				</div>
 			</div>
 		</div>
 		<div class="tile is-ancestor">
 			<div class="tile is-parent">
-				<img class="image" src="/public/images/open-source/vish-k-396770-unsplash.jpg" alt="birdman Dave">
+				<div class="tile is-child">
+					<img class="image" src="/public/images/open-source/vish-k-396770-unsplash.jpg" alt="birdman Dave">
+				</div>
 			</div>
 			<div class="tile is-parent is-8">
 				<div class="tile is-child notification is-warning">
